# AI-Time-Machines

./: .env.ai-starter  .env.example  .eslintrc.json  .gitignore  AI-STARTER-README.md  AI_FIREWALL_CONFIG.md  CODEOWNERS  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATIONS.md  INTEGRATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PROMPT_11_LANGUAGE_LIBRARY.md  PROMPT_11_STACK_PROFILE.md  QUICKSTART-AI-STARTER.md  QUICKSTART.md  README.md  REPO_AWARENESS.md  SECURITY-SUMMARY.md  SECURITY.md  SECURITY_SUMMARY.md  SECURITY_VERIFICATION.md  SETUP.md  TESTING-LOCALLY.md  agent-examples.js  auth.py  config.example.yaml  config.json  config.py  config.yml  demo.py  demo_showcase.py  docker-compose-ai-starter.yml  docker-compose.yml  examples.js  (+21 more)
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  (+2 more)
agents/: README.md  historical-context-agent.js  index.js  temporal-paradox-resolver.js  time-travel-assistant.js
ai-starter-backend/: .env.example  Dockerfile  README.md  requirements.txt
ai-starter-frontend/: Dockerfile  package-lock.json  package.json
ai_time_machines/: __init__.py  cli.py  cloning.py  scraping.py
backend/: Dockerfile  jest.config.js  package-lock.json  package.json
config/: services.example.json
datasets/: README.md  time-machine-training.jsonl
docs/: API_CONFIG.md  FINE_TUNING.md  README.md  api-reference.md  architecture.md  cross-chain-ai-agent-execution-with-moonpay-trade.md  getting-started.md
examples/: advanced_scraping.py  basic_cloning.py  basic_scraping.py  basic_usage.py  combined_usage.py  complete_integration.py  demo.py  integrations-example.js  monitor.py  repository_integration.py  web3ai_integration.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
go-service/: main.go
lippytm_chatgpt/: __init__.py  cli.py
public/: app.js  index.html
python-service/: Dockerfile  app.py  pyproject.toml  requirements.txt
python-service/models/: lstm_model.py  time_series_predictor.py
python-service/tests/: test_app.py  test_health_monitoring.py
routes/: chat.js  payment.js  wallet.js
sdk/: README.md
src/: chatgpt.js  fine-tuning.js  github.js  grok.js  index.js  index.ts  myclaw.js  openclaw.js  orchestration.ts  replit.js
src-rust/: main.rs
tests/: __init__.py  agents.test.js  chatgpt.test.js  conftest.py  fine-tuning.test.js  github.test.js  grok.test.js  myclaw.test.js  openclaw.test.js  replit.test.js  sdk-config.test.js  test_basic.py  test_core.py
utils/: email.js
(+146 files in other folders)
