[project]
name = "ai-time-machines-ml"
version = "2.0.0"
description = "Python ML Service for AI Time Machines Platform"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "numpy>=1.26.2",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "tensorflow>=2.15.0",
    "torch>=2.1.2",
    "statsmodels>=0.14.1",
    "prophet>=1.1.5",
    "joblib>=1.3.2",
    "matplotlib>=3.8.2",
]

[project.optional-dependencies]
ai = [
    "openai>=1.6.0",
    "transformers>=4.36.0",
    "huggingface-hub>=0.20.0",
    "langchain>=0.1.0",
    "llama-index>=0.9.0",
]
vector = [
    "pinecone-client>=3.0.0",
    "weaviate-client>=3.25.0",
    "chromadb>=0.4.0",
]
web3 = [
    "web3>=6.13.0",
    "solana>=0.30.0",
    "eth-account>=0.10.0",
]
messaging = [
    "slack-sdk>=3.26.0",
    "discord.py>=2.3.0",
]
data = [
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "boto3>=1.34.0",
    "ipfshttpclient>=0.8.0",
]
all = [
    "ai-time-machines-ml[ai,vector,web3,messaging,data]"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
